# clinical-trial-env

./: .gitignore  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
data/: protocols.py
server/: Dockerfile  app.py  environment.py
