[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-trial-env"
version = "1.0.0"
description = "Clinical trial protocol review environment for RL agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "openai>=2.7.2",
    "pyyaml>=6.0",
    "huggingface_hub>=0.20.0",
    "openenv-core>=0.2.3",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]